# iydlr

./: .gitignore  Cargo.toml  LICENCE  README.md  mathjax-header.html
attention/: Cargo.toml
attention/src/: attention.rs
autodiff/: Cargo.toml
autodiff/src/: dual_number.rs  lib.rs  node.rs
autodiff/tests/: autodiff_tensors_test.rs
config/src/: lib.rs
elements/: Cargo.toml
elements/src/: dual_number.rs  lib.rs
embeddings/: Cargo.toml
embeddings/src/: lib.rs  pos_encoding.rs
interfaces/: Cargo.toml
interfaces/src/: deep_learning.rs  lib.rs  tensors.rs  utils.rs
neural_nets/: Cargo.toml
neural_nets/src/: act_layer.rs  embedding_table.rs  lib.rs  lin_layer.rs  norm_layer.rs  optim.rs  serial.rs  xor_generator.rs
neural_nets/tests/: xor_generator.rs  xor_test.rs
tensors/: Cargo.toml
tensors/src/: f64_tensor.rs  lib.rs
tokenisation/: Cargo.toml  my_text.txt
tokenisation/src/: batch_generator.rs  lib.rs  tokeniser.rs
transformer/: Cargo.toml
transformer/src/: block.rs  lib.rs  transformer.rs
transformer/tests/: transformer_test.rs
