[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
attention = { version = "0.1.0", path = "../attention" }
autodiff = { version = "0.1.0", path = "../autodiff" }
config = { version = "0.1.0", path = "../config" }
embeddings = { version = "0.1.0", path = "../embeddings" }
interfaces = { version = "0.1.0", path = "../interfaces" }
neural_nets = { version = "0.1.0", path = "../neural_nets" }
num-traits = "0.2.19"
tensors = { version = "0.1.0", path = "../tensors" }
tokenisation = { version = "0.1.0", path = "../tokenisation" }
